--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,8 @@ dependencies:
 
   #Network
   dio:
-  web_socket_channel: ^2.4.0
+  socket_io_client: ^2.0.3+1
+  #web_socket_channel: ^2.4.0
 
 dev_dependencies:
   flutter_test:
